# Cascade

./: .env.example  .gitignore  LICENSE  README.md  auth.ts  next.config.ts  package-lock.json  package.json  problem statements.txt  tailwind.config.ts
.claude/: launch.json
.github/workflows/: keep-alive.yml
app/: globals.css  layout.tsx  page.tsx
app/api/buckets/: route.ts
app/api/graph/: route.ts
app/api/history/: route.ts
app/api/ingest/: route.ts
app/api/query/: route.ts
cascade-agents/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_config.example.yaml  bootstrap.py  docker-compose.yml  pyproject.toml  run_one.py  spike_t1.py  verify_setup.py
cascade-agents/src/cascade_agents/: __init__.py  agents.py  comprehension.py  graph_digest.py  health.py  loop_guard.py  main.py  repo_context.py  seed_room.py
components/: BucketCard.tsx  BucketDetail.tsx  BucketSection.tsx  GraphView.tsx  HistoryPanel.tsx  NodeDetail.tsx  RepoInput.tsx  RippleLauncher.tsx  UserMenu.tsx
fixtures/: nextjs-app.ts  python-service.ts
lib/kg/: history.ts  index.ts  pipeline.ts  readme.md
tasks/: plan.md  todo.md
tests/: scaffold.test.ts
tests/api/: contract.test.ts
tests/classify/: classifier.test.ts  content.test.ts  folder-rename.test.ts  manifests.test.ts  readme.test.ts  rules.test.ts  signals.test.ts
tests/enrich/: enricher.test.ts
tests/graph/: edges.test.ts  infer-layer.test.ts  review.test.ts  store.test.ts
tests/ingest/: github.test.ts  scan.test.ts
tests/integration/: classify.test.ts
types/: next-auth.d.ts
(+18 files in other folders)
