[project]
name = "cascade-agents"
version = "0.1.0"
description = "Cascade Phase 2 — band.ai multi-agent ripple analysis (CrewAI remote agents)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Public PyPI package is `band-sdk`; the import name is `thenvoi`.
    "band-sdk[crewai]>=1.0.0",
    "crewai[anthropic]>=1.14.3",
    "httpx>=0.27",        # fetch the knowledge graph from /api/graph
    "python-dotenv>=1.0", # load .env locally
    "pyyaml>=6.0",        # read agent_config.yaml
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade_agents"]
